--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,8 +1,8 @@
 /* General style Page */
 * {
-  font-family: "Montserrat", sans-serif;
-  margin: 0;
-  padding: 0;
+  /* font-family: "Montserrat", sans-serif; */
+  /* margin: 0; */
+  /* padding: 0; */
 }
 
 #body {
@@ -13,7 +13,7 @@
 html {
   /* font-size:10px */
   /* 10px / 16px = 0.625=62.5% */
-  font-size: 62.5%;
+  /* font-size: 62.5%; */
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
@@ -46,7 +46,7 @@ html {
 }
 
 #category > div {
-  /* width: 117rem; */
+  width: 117rem;
   display: flex;
   justify-content: center;
   gap: 1.5rem;
